--- a/src/app/device/device.component.html
+++ b/src/app/device/device.component.html
@@ -8,7 +8,7 @@
                            <div class="card-header card-header-info">
                                <div class="row">
                                     <div class="col-md-4">
-                                   <h4 class="card-title p-3">Liste des devices</h4> 
+                                   <h4 class="card-title p-3">Liste des boitiers GPS</h4> 
                                     </div>
                                     <div class="col-md-5 p-3">
                                          <!-- search bar -->
@@ -83,10 +83,10 @@
                                              {{device?.powerVoltage}}
                                            </td>
                                            <td class="tdName">
-                                            {{device?.deviceIMEI}
+                                            {{device?.deviceIMEI}}
                                           </td>
                                           <td class="tdName">
-                                            {{device?.externalStorage}
+                                            {{device?.externalStorage}}
                                           </td>
                                           <td class="tdName">
                                             {{device?.batteryVoltage}}
