--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -58,9 +58,9 @@
     </div>
 </nav>
 
-<!--
 
-<nav class="navbar navbar-transparent navbar-absolute">
+
+<!-- <nav class="navbar navbar-transparent navbar-absolute">
     <div class="container-fluid">
         <div class="navbar-header">
             <button mat-raised-button type="button" class="navbar-toggle" data-toggle="collapse" (click)="sidebarToggle()">
