--- a/src/app/vehicule/vehicule.component.css
+++ b/src/app/vehicule/vehicule.component.css
@@ -52,7 +52,9 @@ h4 {
   }
 .engine{
     border-bottom: none;
+    border-top: 1px dashed rgba(0,0,0,.2);
     border-right: 1px dashed rgba(0,0,0,.2);
+
     flex-basis: 100%;
     padding: 25px 50px;
 
@@ -155,3 +157,53 @@ hr:after {
 
   font-weight: bold;
 }
+.cycle-tab-container {
+  margin: 30px auto;
+  width: 800px;
+  padding: 20px;
+  box-shadow: 0 0 10px 2px #ddd;
+}
+
+ .cycle-tab-container a {
+  color: #173649;
+  font-size: 16px;
+  font-family: roboto;
+  text-align: center;
+}
+
+.tab-pane {
+    text-align: center;
+    margin: 30px auto;
+    max-width: 100%;
+}
+
+
+
+.fade.active {
+  opacity: 1;
+} 
+
+.cycle-tab-item {
+  width: 180px;
+}
+
+.cycle-tab-item:after {
+  display:block;
+  content: '';
+  border-bottom: solid 3px orange;  
+  transform: scaleX(0);  
+  transition: transform 0ms ease-out;
+}
+.cycle-tab-item.active:after { 
+  transform: scaleX(1);
+  transform-origin:  0% 50%; 
+  transition: transform 5000ms ease-in;
+}
+
+
+.nav-link:focus,
+.nav-link:hover,
+.cycle-tab-item.active a {
+  border-color: transparent !important;
+  color: orange;
+} 
