--- a/src/app/vehicule/vehicule.component.html
+++ b/src/app/vehicule/vehicule.component.html
@@ -46,9 +46,7 @@
                                        <th>
                                            Fabricant
                                        </th>
-                                       <th>
-                                           Device
-                                        </th>
+                                       generate service popup --skip-tests
                                    </thead>
                                    <tbody>
                                        <tr class="clickable" (click)="onOpenModal('view', vehicule)" *ngFor="let vehicule of vehicules | paginate: {itemsPerPage: tableSize,
@@ -69,18 +67,6 @@
                                            <td class="tdName">
                                              {{vehicule?.manufacturer}}
                                            </td>
-                                           <!-- <td class="tdName">
-                                            
-                                            <mat-list>
-                                                <mat-list-item>
-                                                    <mat-select placeholder="GPS affecté " name="item" (click)="$event.stopPropagation(); getVehiculeDevices(vehicule)">
-                                                      <mat-option *ngFor="let item of devices1" [value]="item">
-                                                        {{item.deviceName}}
-                                                      </mat-option>
-                                                    </mat-select>
-                                                </mat-list-item>
-                                            </mat-list>
-                                           </td>  -->
                                            
                                            <td>
                                                <div class="card-body">
