--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <!-- display navbar if component is not map -->
-<div *ngIf="getTitle()!='Map-leaflet'">
+<div *ngIf="getTitle()!='Carte'">
     <nav class="navbar navbar-expand-lg navbar-transparent  navbar-absolute fixed-top">
         <div class="container-fluid">
             <div class="navbar-wrapper">
