--- a/src/app/map-leaflet/map-leaflet.component.html
+++ b/src/app/map-leaflet/map-leaflet.component.html
@@ -132,7 +132,7 @@
         </div>
 
         
-        <div class="col-md-12" *ngIf="clickedVehicule?.devices?.length>1">
+        <div class="col-md-12" *ngIf="clickedVehicule?.devices?.length>=1">
           <mat-form-field>
           
             <mat-label>GPS</mat-label>
@@ -143,6 +143,9 @@
             </mat-select>  
             </mat-form-field>
           </div>
+          <div class="col-md-12" *ngIf="clickedVehicule?.devices?.length<1">
+            <h4>pas de device ==> pas de trajet</h4>
+            </div>
 
     
 
