--- a/src/app/vehicule/vehicule.component.html
+++ b/src/app/vehicule/vehicule.component.html
@@ -864,7 +864,7 @@
                
              </div>
              <div class="modal-body">
-                <p>Êtes-vous sûr de vouloir supprimer le véhicule {{deleteVehicule?.vehiculeId}}  avec le numéro de châssis {{deleteVehicule?.serialNumber}} ?</p>
+                <p>Êtes-vous sûr de vouloir supprimer l'unité mobile {{deleteVehicule?.vehiculeId}}  avec le numéro de châssis {{deleteVehicule?.serialNumber}} ?</p>
                 <div class="col-md-12 buttons">
                  
                    <button (click)="onDeleteVehicule(deleteVehicule!.vehiculeId)" class="btn btn1 btn-danger mr-auto" data-dismiss="modal">Oui</button>
