--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -27,7 +27,7 @@
                           <i class="material-icons">store</i>
                       </div>
                       <p class="card-category">Vehicules disponibles</p>
-                      <!-- <h3 class="card-title">{{nombreVehicules}}</h3> -->
+                      <h3 class="card-title">{{nombreVehicules}}</h3>
                   </div>
                   <div class="card-footer">
                       <div class="stats">
